--- a/sgim/templates/gestion/host_details.html
+++ b/sgim/templates/gestion/host_details.html
@@ -6,7 +6,7 @@
 {% block include_statics %}
 
 
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
 <link href="{{BOWER_URL}}ckeditor/plugins/codesnippet/lib/highlight/styles/monokai_sublime.css" rel="stylesheet">
 <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
     
@@ -376,7 +376,7 @@
 		}
 	});	
         
-		 $('#jqxTabs').jqxTabs({ width: '90%', position: 'top', animationType: 'fade', theme:"energyblue" });
+		 $('#jqxTabs').jqxTabs({ width: '90%', position: 'top', animationType: 'fade', theme:"metro" });
 		      
  							BootsFields = [
 			                    { name: 'id', type: 'int' },
@@ -503,9 +503,9 @@
         }
 
     $("#jqxgridBoots").jqxGrid({
-        theme:"energyblue",
+        theme:"metro",
         width: '100%',
-        theme:'energyblue', 
+        theme:'metro', 
         showfilterrow: true,
         filterable: true,
         pageable: true,
@@ -514,9 +514,9 @@
 
     });
      $("#jqxgridInterfaces").jqxGrid({
-        theme:"energyblue",
+        theme:"metro",
         width: '100%',
-        theme:'energyblue', 
+        theme:'metro', 
         showfilterrow: true,
         filterable: true,
         pageable: true,
@@ -525,9 +525,9 @@
 
     });
        $("#jqxgridProcesses").jqxGrid({
-        theme:"energyblue",
+        theme:"metro",
         width: '100%',
-        theme:'energyblue', 
+        theme:'metro', 
         showfilterrow: true,
         filterable: true,
         pageable: true,
@@ -536,9 +536,9 @@
 
     });
      $("#jqxgridGeneral").jqxGrid({
-        theme:"energyblue",
+        theme:"metro",
         width: '100%',
-        theme:'energyblue', 
+        theme:'metro', 
         showfilterrow: true,
         filterable: true,
         pageable: true,
