--- a/sgim/templates/incidencias/nuevo_actividad_incidencia.html
+++ b/sgim/templates/incidencias/nuevo_actividad_incidencia.html
@@ -5,7 +5,7 @@
 
 {% block include_statics %}
 <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
 
     
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
@@ -220,11 +220,11 @@ $(document).ready(function() {
 });
 
 	    $("#inicio").jqxDateTimeInput({
-	        theme:'energyblue',min: yesterday, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
+	        theme:'metro',min: yesterday, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
 	    });
  
 	    $("#fin").jqxDateTimeInput({
-	        theme:'energyblue',min: yesterday2, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
+	        theme:'metro',min: yesterday2, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
 	    });
 
       $('#inicio ').jqxDateTimeInput('setDate', yesterday);
@@ -242,7 +242,7 @@ $(document).ready(function() {
 
   	$("#tiempo").jqxNumberInput({ 
   		spinButtons: true, min: 0,
-  		theme:'energyblue',inputMode: 'simple',
+  		theme:'metro',inputMode: 'simple',
   		 decimalDigits: 0, disabled: true 
   		 });
 
@@ -266,7 +266,7 @@ $(document).ready(function() {
         };
         var incidenteAdapter = new $.jqx.dataAdapter(incidenteSource);
 
-    $("#incidencia").jqxComboBox({ theme:'energyblue', promptText: "A que incidente se relaciona la actividad...", source:incidenteAdapter, displayMember: 'id', valueMember: 'id', width:'90%'});
+    $("#incidencia").jqxComboBox({ theme:'metro', promptText: "A que incidente se relaciona la actividad...", source:incidenteAdapter, displayMember: 'id', valueMember: 'id', width:'90%'});
 
 
 $('#form').jqxValidator({
