--- a/sgim/templates/inventario/dispositivo_detalle.html
+++ b/sgim/templates/inventario/dispositivo_detalle.html
@@ -6,7 +6,7 @@
 {% block include_statics %}
 
 
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
 <link href="{{BOWER_URL}}ckeditor/plugins/codesnippet/lib/highlight/styles/monokai_sublime.css" rel="stylesheet">
 
     
@@ -210,7 +210,7 @@
 
 <script>
 	$(document).ready(function() {
-		 $('#jqxTabs').jqxTabs({ width: '90%', position: 'top', animationType: 'fade', theme:"energyblue" });
+		 $('#jqxTabs').jqxTabs({ width: '90%', position: 'top', animationType: 'fade', theme:"metro" });
 		   
 		$('.ui.accordion')
 		  .accordion();
