--- a/sgim/templates/mantto/rutinas.html
+++ b/sgim/templates/mantto/rutinas.html
@@ -6,7 +6,7 @@
 
 {% block include_statics %}
     <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
  <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
     
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
@@ -95,7 +95,7 @@
             {
                 width:'100%',
                 pageable: true,
-                theme:'energyblue',
+                theme:'metro',
                 showtoolbar: true,
                 source:dataAdapter,
                 height: 250 ,
