--- a/sgim/templates/incidencias/cambios.html
+++ b/sgim/templates/incidencias/cambios.html
@@ -8,7 +8,7 @@ Control de Cambios
 
 
 
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
  <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
     
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
@@ -119,9 +119,9 @@ $(document).ready(function() {
 
 
     /*Inicializar Combos obteniendo los datos del api rest de catalogos*/
-    function get_datos(paraenergyblues){
-        if(!paraenergyblues)
-            paraenergyblues = ""
+    function get_datos(parametros){
+        if(!parametros)
+            parametros = ""
          var source =
             {
                 datatype: "json",
@@ -141,7 +141,7 @@ $(document).ready(function() {
                    
                 ],
                 id: 'id',
-                url: '/api/incidencias/cambios/'+paraenergyblues
+                url: '/api/incidencias/cambios/'+parametros
             };
       var dataAdapter = new $.jqx.dataAdapter(source);
       return dataAdapter
@@ -176,7 +176,7 @@ $(document).ready(function() {
     $("#jqxgrid").jqxGrid({
 
                 width: '100%',
-                theme:'energyblue', 
+                theme:'metro', 
                 source: get_datos(),
                 showfilterrow: true,
                 filterable: true,
