--- a/sgim/templates/mantto/nueva_rutina.html
+++ b/sgim/templates/mantto/nueva_rutina.html
@@ -10,7 +10,7 @@ Nueva Rutina
     <link rel="stylesheet" href="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.css">
 {% endcomment %}
 <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
 
     
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
@@ -173,7 +173,7 @@ function get_selected_items(){
 
     $("#duracion_estimada").jqxNumberInput({ 
         spinButtons: true, min: 0.5,
-        theme:'energyblue',inputMode: 'simple',
+        theme:'metro',inputMode: 'simple',
          decimalDigits: 1,
          });
 
@@ -191,7 +191,7 @@ function get_selected_items(){
         };
         var sistemaAdapter = new $.jqx.dataAdapter(sistemaSource);
 
-    $("#sistema").jqxComboBox({ theme:'energyblue', promptText: "Sistema al que pertenece...", source:sistemaAdapter, displayMember: 'text', valueMember: 'id'});
+    $("#sistema").jqxComboBox({ theme:'metro', promptText: "Sistema al que pertenece...", source:sistemaAdapter, displayMember: 'text', valueMember: 'id'});
     var tareasSource =
         {
             dataType: "json",
@@ -203,7 +203,7 @@ function get_selected_items(){
         };
         var adapTareas = new $.jqx.dataAdapter(tareasSource);
 
-    //$("#tareas").jqxComboBox({ theme:'energyblue', promptText: "Selecciones las tareas que integran la rutina...", source:adapTareas, displayMember: 'nombre', valueMember: 'id', width:'100%', multiSelect: true});
+    //$("#tareas").jqxComboBox({ theme:'metro', promptText: "Selecciones las tareas que integran la rutina...", source:adapTareas, displayMember: 'nombre', valueMember: 'id', width:'100%', multiSelect: true});
 
      $('#form').jqxValidator({
                 rules: [
