--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
-    <link rel="stylesheet" href="{{STATIC_URL}}css/todo.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
     <link rel="stylesheet" type="text/css" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" />
     <link rel="stylesheet" href="{{BOWER_URL}}kc_fab/dist/css/kc.fab.css"/>
  
