--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -70,7 +70,7 @@
         $(document).ready(function() {
              
 
-                //$.material.init();
+                $.material.init();
                 var links = [
                     {
                         "bgcolor":"#F44336",
