--- a/sgim/templates/mantto/estadistica_anual.html
+++ b/sgim/templates/mantto/estadistica_anual.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-Estadisticas mensuales 
+Estadisticas anuales de mantenimiento 
 {% endblock titulo %}
 
 
