--- a/sgim/templates/report_base.html
+++ b/sgim/templates/report_base.html
@@ -28,6 +28,10 @@
             left: 270pt; width: 500pt; top: 762pt; height: 20pt;
         }
 
+        table {
+            -pdf-keep-in-frame-mode: truncate;
+        }
+
     }
 </style>
 </head>
