--- a/sgim/templates/report_base.html
+++ b/sgim/templates/report_base.html
@@ -30,7 +30,7 @@
     }
 
     table {
-        -pdf-keep-in-frame-mode: shrink;
+        -pdf-keep-in-frame-mode: truncate;
     }
 </style>
 </head>
