--- a/sgim/templates/inventario/reportes/listado.html
+++ b/sgim/templates/inventario/reportes/listado.html
@@ -23,7 +23,7 @@
 <table style='padding-top: 20px'>
 	<thead>
 		<tr style='border: 1px solid #009688'>
-			<th class='head' style='width:50px'>ID</th>
+			<!-- <th class='head' style='width:50px'>ID</th> -->
 			<th class='head'>POSICION</th>
 			<th class='head'>TIPO</th>
 			<th class='head'>N&deg; SERIE</th>
@@ -36,7 +36,7 @@
 	<tbody>
 		{% for disp in dispositivos %}
 			<tr >
-				<td style='border-bottom: 1px solid #BDBDBD'>{{disp.id}}</td>
+				<!--  <td style='border-bottom: 1px solid #BDBDBD'>{{disp.id}}</td> -->
 				<td style='border-bottom: 1px solid #BDBDBD'>{{disp.posicion_logica}}</td>
 				<td style='border-bottom: 1px solid #BDBDBD'>{{disp.tipo}}</td>
 				<td style='border-bottom: 1px solid #BDBDBD'>{{disp.serie}}</td>
