--- a/sgim/templates/incidencias/detalle_incidente.html
+++ b/sgim/templates/incidencias/detalle_incidente.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-	Detalles de cambio
+	Detalles de incidente
 {% endblock titulo %}
 
 {% block contenido %}
