--- a/sgim/templates/incidencias/reports/detalle_cambio.html
+++ b/sgim/templates/incidencias/reports/detalle_cambio.html
@@ -5,7 +5,7 @@
 	.titulo_inc{
 		background-color:#00BCD4;
 		color: white;
-		font-size: 14px;
+		font-size: 12px;
 		border: none;
 	}
 	.titulo_mtto{
@@ -23,7 +23,7 @@
 		background-color:#4DD0E1;
 		color: white;
 		border: none;
-		font-size: 13px;
+		font-size: 11px;
 	}
 	.sub_titulo_inc2{
 		background-color:#FFF9C4;
@@ -41,7 +41,7 @@
 		<th style="width:65% ; text-align:left">
 			<h1>CAMBIO  N&deg;{{cambio.id}}</h1>
 		</th>
-		<th style="width:35%; text-align:right">
+		<th style="width:35%; text-align:right; font-size: 11px; ">
 			<h1>{% now "jS F Y H:i" %}</h1>
 		</th>
 	</tr>
