--- a/sgim/templates/gestion/hosts.html
+++ b/sgim/templates/gestion/hosts.html
@@ -137,7 +137,7 @@ $(document).ready(function() {
                 datatype: "json",
                 datafields: [
                     { name: 'id', type: 'int' },
-                    { name: 'direccion', type: 'string' },
+                    { name: 'position', type: 'string' },
                     { name: 'nombre', type: 'string' },
                     { name: 'uptime', type: 'string' },
                     { name: 'servicios', type: 'string' },
