--- a/sgim/templates/gestion/hosts_listado.html
+++ b/sgim/templates/gestion/hosts_listado.html
@@ -48,7 +48,7 @@
 		<tr style='border: 1px solid #009688'>
 			<!-- <th class='head' style='width:100px'>Poscicion</th> -->
 			<th class='head'>Hostname</th>
-			<th class='head'>Direccion</th>
+			<th class='head'>Posicion</th>
 			<th class='head'>Uptime</th>
 			<th class='head' style='width:100px'>Servicios</th>
 			<th class='head' style='width:100px'>Procesos</th>
@@ -64,7 +64,7 @@
 			<tr >
 				<!--<td style='border-bottom: 1px solid #BDBDBD'></td> -->
 				<td style='border-bottom: 1px solid #BDBDBD'>{{host.nombre}}</td>
-				<td style='border-bottom: 1px solid #BDBDBD'>{{host.direccion}}</td>
+				<td style='border-bottom: 1px solid #BDBDBD'>{{host.position}}</td>
 				<td style='border-bottom: 1px solid #BDBDBD'>{{host.get_duration}}</td>
 				<td style='border-bottom: 1px solid #BDBDBD'>{{host.servicios}}</td>
 				<td style='border-bottom: 1px solid #BDBDBD'>{{host.procesos}}</td>
