--- a/sgim/templates/gestion/host_details.html
+++ b/sgim/templates/gestion/host_details.html
@@ -84,7 +84,7 @@
 							      	<h3 class="ui dividing purple header">
 									  <i class="terminal icon"></i>
 									  <div class="content" >
-									    {{host}} - {{host.nombre}}
+									    {{host}} - {{host.nombre}} ({{host.position}})
 									    <div class="sub header">{{host.descripcion}}</div>
 									  </div>
 									</h3>
