--- a/sgim/templates/gestion/host_report.html
+++ b/sgim/templates/gestion/host_report.html
@@ -40,7 +40,7 @@
 			<h1>{{host.direccion}}</h1>
 		</th>
 		<th style="width:35%; text-align:right">
-			<h1>{{host.nombre}}</h1>
+			<h1>{{host.nombre}} ({{host.position}})</h1>
 		</th>
 	</tr>
 </table>
