--- a/sgim/templates/home.html
+++ b/sgim/templates/home.html
@@ -253,7 +253,9 @@
                                                      Responsable: {{mantto.responsable}} 
                                                     </span>
                                                     <br> <small> Para el {{mantto.fecha_inicio_prevista |date:"l, d F Y"}}</small>
-                                                    
+                                                    {% if mantto.fecha_inicio_prevista <= now %}
+                                                         Retrazado!
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>  
